# optymalizacja1000

./: CMakeLists.txt  data_0.05.csv  data_0.12.csv  main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  solution.cpp  solution.h  user_funs.cpp  user_funs.h  xlsx4.xlsx
data4/: data_-1.csv  data_0.12.csv
data5/: data_1.csv  xlsx5.xlsx
data6/: data_0.01.csv  data_0.1.csv  data_1.csv  data_10.csv  data_100.csv  polozenia.txt  real_solution.csv  xlsx6.xlsx
